// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCardNumber component should renders correctly when cardType is present 1`] = `
<View>
  <CreditCardTextBox
    ariaLabel="input"
    cardType="VISA"
    className="field"
    customStyle={Object {}}
    dataLocator="input-field"
    enableSuccessCheck={false}
    id="input"
    isEdit={false}
    keyboardType="default"
    label="input"
    meta={
      Object {
        "error": "",
        "touched": "",
      }
    }
    secureTextEntry={false}
    type="text"
    val=""
  />
</View>
`;

exports[`CreditCardNumber component should renders correctly when isExpirationRequired is false 1`] = `
<View>
  <CreditCardTextBox
    ariaLabel="input"
    cardType=""
    customStyle={Object {}}
    dataLocator="input-field"
    enableSuccessCheck={false}
    id="input"
    isEdit={false}
    keyboardType="default"
    label="input"
    meta={
      Object {
        "error": "",
        "touched": "",
      }
    }
    secureTextEntry={false}
    type="text"
    val=""
  />
</View>
`;
